fix localized comment name

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,7 +9,7 @@ ru:
   activerecord:
     models:
       post: "Пост"
-      post_сomment: "Комментарий"
+      post_comment: "Комментарий"
     attributes:
       post:
         title: "Заголовок"
